# lightning

./: Cargo.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
src/: hal.rs  main.rs  testing.rs
src/hal/: arch.rs  boot.rs  core.rs  execution.rs  interrupts.rs  trap.rs
src/hal/arch/: riscv.rs
src/hal/arch/riscv/: csr.rs  instructions.rs
src/hal/arch/riscv/instructions/: csr.rs
src/hal/boot/: riscv.rs
src/hal/core/: riscv.rs
src/hal/execution/: riscv.rs
src/hal/lds/: riscv.lds
src/hal/trap/: riscv.rs
