[package]
name = "lightning"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lightning"
path = "src/main.rs"
test = false
doctest = false
harness = false
bench = false

[profile.release-fast]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]

[target.'cfg(any(target_arch = "riscv32", target_arch="riscv64"))'.dependencies]
riscv = "0.13"
